--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Visible content for the page -->
         <body>
-            <img id="mainpic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRqyTyr0LwRTPS3TXqpElwRkh4BqUahL7PtmCS6SuW9U-bHHCZkrF-x8eTtRHelQH9z0QtwGve_tGLokuSfU6HFWPMEAQ=s1600" /> <a/>
+            <img id="mainpic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRqyTyr0LwRTPS3TXqpElwRkh4BqUahL7PtmCS6SuW9U-bHHCZkrF-x8eTtRHelQH9z0QtwGve_tGLokuSfU6HFWPMEAQ=s1600" /> 
             
             <div id="MainText">
                 <span>an Anders Law website <br /></span><br />
