--- a/photos.html
+++ b/photos.html
@@ -16,7 +16,7 @@
             <img id="logo" alt="logo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRqyTyr0LwRTPS3TXqpElwRkh4BqUahL7PtmCS6SuW9U-bHHCZkrF-x8eTtRHelQH9z0QtwGve_tGLokuSfU6HFWPMEAQ=s1600" /> <a/>
             <div id="MainText">
                 <h1>photos</h1>
-                <span>an Anders Law website <br /></span><br />
+                <span>an Anders La website <br /></span><br />
                 
                 </div>
         </div>
