navbar now shifts with flexbox

--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
 
   <!-- Visible content for the page -->
   <body id="mainpage">
-
+    <div class="maincontainer">
     
-  <div class="maincontainer">
-    <aside class="sidebar">
-      <span class="innertext">sidebar</span>
-    </aside>
+      <aside class="sidebar">
+        <nav role='navigation'>
+          <ul id="nav">
+            <ul><a href="resume.html">Resume</a></ul>
+            <ul><a href="art.html">Art</a></ul>
+            <ul><a href="photos.html">Photos</a></ul>
+            <ul><a href="#page-contact">blah blah</a></ul>
+          </ul>   
+        </nav>
+      </aside>
 
-    <main class="content">
-      <span class="innertext">content area</span>
-    </main>
-  </div>
+        <main class="content">
+          <span class="innertext">content area</span>
+      </main>
+    </div>
     
 
     <footer>
