--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </aside>
 
         <main class="content">
-          <span class="innertext">content area</span>
-      </main>
+          <img id="mainpic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRqyTyr0LwRTPS3TXqpElwRkh4BqUahL7PtmCS6SuW9U-bHHCZkrF-x8eTtRHelQH9z0QtwGve_tGLokuSfU6HFWPMEAQ=s1600" />
+        </main>
     </div>
     
 
