footer text flexes with screen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
     <footer>
-      <span class="footy">an Anders Law website</span>
+      <span id="footy">an Anders Law website</span>
     </footer>
     
   
