contact page started

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav role='navigation'>
           <ul id="nav">
             <ul><a href="resume.html">Resume</a></ul>
-            <ul><a href="art.html">Art</a></ul>
+            <ul><a href="contact.html">How to Find Me</a></ul>
             <ul><a href="photos.html">Photos</a></ul>
             <ul><a href="#page-contact">blah blah</a></ul>
           </ul>   
