progress on contact page

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 
             <main class="content">
                 <img id="resumeimage" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS3mOYGWSI90DmqvDfNAMhIWul8ZRB8f6pEiVXdg3dNvDE30CP-Ym3BF5Hoby-7VEPEYW2SJYGgAPhIy7R1wivUl85iXQ=s1600" />
-                <a id="downloadbutton" href="https://drive.google.com/uc?export=download&id=1BmIzmnjfQEXxRaRkA0R4XxQuI4xocV2K" target="_blank" rel="nofollow noopener noreferrer">click here for pdf download</a>
+                <a id="downloadbutton" href="https://drive.google.com/uc?export=download&id=1BmIzmnjfQEXxRaRkA0R4XxQuI4xocV2K" rel="nofollow noopener noreferrer">click here for pdf download</a>
             </main>
         </div>
     </div>
