css for links has been changed

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             </aside>
 
             
-                    <main class="content">
+                    <main class="content2">
                         <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking Boar's Head Lounge.<br> Go downstairs and back to the second pool table on the left, im usually there.<br><br>or the sewing lab</span>
                         <div class="logogroup">
                             <a class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
