--- a/txmi.html
+++ b/txmi.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Resume</title>
+        <title>TXMI 4280/5210</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
@@ -16,7 +16,7 @@
     <div class="parentresume">
         <div class="wrapper2">
             <main>
-                <span id="resumeheader">Resume</span>
+                <span id="resumeheader">Digital Design/Apparel Design Studio</span>
             </main>
         </div>
 
