--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                     <ul id="resumenav">
                         <ul><a href="resume.html">Resume</a></ul>
                         <ul><a href="contact.html">How to Find Me</a></ul>
-                        <ul><a href="photos.html">Photos</a></ul>
+                        <ul><a href="txmi.html">TXMI 4280/5210</a></ul>
                         <ul><a href="#page-contact">blah blah</a></ul>
                     </ul>   
                 </nav>
