digital page started

--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
                     <ul id="resumenav">
                         <ul><a href="resume.html">Resume</a></ul>
                         <ul><a href="contact.html">How to Find Me</a></ul>
-                        <ul><a href="txmi.html">TXMI 4280/5210</a></ul>
-                        <ul><a href="#page-contact">blah blah</a></ul>
+                        <ul><a href="txmi.html">TXMI Capstone</a></ul>
+                        <ul><a href="kaledo.html">Digital Designs</a></ul>
                     </ul>   
                 </nav>
             </aside>
