--- a/kaledo.html
+++ b/kaledo.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Resume</title>
+        <title>Digital Designs</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
@@ -11,16 +11,14 @@
     </head>
 
   <!-- Visible content for the page -->
-  <body id="resumepage">
+  <body id="kaledopage">
 
     <div class="parentresume">
         <div class="wrapper2">
             <main>
-                <span id="resumeheader">Resume</span>
+                <span id="resumeheader">Digital Designs</span>
             </main>
         </div>
-
-
 
 
         <div class="maincontainer">
@@ -36,9 +34,10 @@
                 </nav>
             </aside>
 
-            <main class="content">
-                <img id="resumeimage" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS3mOYGWSI90DmqvDfNAMhIWul8ZRB8f6pEiVXdg3dNvDE30CP-Ym3BF5Hoby-7VEPEYW2SJYGgAPhIy7R1wivUl85iXQ=s1600" />
-                <a id="downloadbutton" href="https://drive.google.com/uc?export=download&id=1BmIzmnjfQEXxRaRkA0R4XxQuI4xocV2K" rel="nofollow noopener noreferrer">click here for pdf download</a>
+            <main class="content3">
+                <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYR9ez8Qlz_wMag1tecRZPESjwY5vPHnrO1abAlJ8Mo8vtkLHfZaDT8Rf0dWwpQqExCeexkbPrhNkHrY1qw4w8NNc2TsCg=s1600?source=screenshot.guru"/>
+                <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS85-P9tUqxUGQzGVgDX57rc4Qf8PeRxsrggkjzQa2MEBwtYXnLczrzohhBxJut54QB7hGWHgCimvdHBgBZudwiCEFlww=s1600"/>
+               
             </main>
         </div>
     </div>
