--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <ul id="nav">
             <ul><a href="resume.html">Resume</a></ul>
             <ul><a href="contact.html">How to Find Me</a></ul>
-            <ul><a href="txmi.html">TXMI 4280/5210</a></ul>
-            <ul><a href="#page-contact">blah blah</a></ul>
+            <ul><a href="txmi.html">TXMI Capstone</a></ul>
+            <ul><a href="kaledo.html">Digital Designs</a></ul>
           </ul>   
         </nav>
       </aside>
