--- a/txmi.html
+++ b/txmi.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>TXMI 4280/5210</title>
+        <title>TXMI Capstone</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
@@ -16,11 +16,9 @@
     <div class="parentresume">
         <div class="wrapper2">
             <main>
-                <span id="resumeheader">Digital Design/Apparel Design Studio</span>
+                <span id="resumeheader">TXMI Capstone</span>
             </main>
         </div>
-
-
 
 
         <div class="maincontainer">
@@ -30,16 +28,15 @@
                     <ul id="resumenav">
                         <ul><a href="resume.html">Resume</a></ul>
                         <ul><a href="contact.html">How to Find Me</a></ul>
-                        <ul><a href="txmi.html">TXMI 4280/5210</a></ul>
-                        <ul><a href="#page-contact">blah blah</a></ul>
+                        <ul><a href="txmi.html">TXMI Capstone</a></ul>
+                        <ul><a href="kaledo.html">Digital Designs</a></ul>
                     </ul>   
                 </nav>
             </aside>
 
             <main class="content">
-                <img id="resumeimage" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS3mOYGWSI90DmqvDfNAMhIWul8ZRB8f6pEiVXdg3dNvDE30CP-Ym3BF5Hoby-7VEPEYW2SJYGgAPhIy7R1wivUl85iXQ=s1600" />
-                <a id="downloadbutton" href="https://drive.google.com/uc?export=download&id=1BmIzmnjfQEXxRaRkA0R4XxQuI4xocV2K" rel="nofollow noopener noreferrer">click here for pdf download</a>
-            </main>
+                <img id="txmiart" src="https://lh3.googl00" />
+                </main>
         </div>
     </div>
   </body>     
