--- a/txmi.html
+++ b/txmi.html
@@ -34,9 +34,24 @@
                 </nav>
             </aside>
 
-            <main class="content">
-                <img id="txmiart" src="https://lh3.googl00" />
-                </main>
+            <main class="content3">
+                <span class="txmitext">Target Market</span>
+                    <div class="kaledoset">
+                        <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQfL0r4SutctJwHjFUihkeXqAOI9vGAjuPQwl00vjWHOohxY6U6Q0ed-KJztVk0RI_MGQoqtvGwGKqAPguhU3h40-aA7g=s1600"/>
+                    </div>
+                <span class="txmitext">MoodBoard</span>
+                    <div class="kaledoset">
+                        <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYT97OG8TBHokYB-cCDTCjk2dQApREx_kZdvgwpueDgfiQmnWXVB7-EHxrrb9hXCbGib6mw8NRZzWoewWgg1d-X1AKF-jg=s1600"/>
+                    </div>   
+                <span class="txmitext">Line Sheet</span>
+                    <div class="kaledoset">
+                        <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS3d4QRWIyLiPtQNNO9hWl1CRKa8zr_Z322I_7uc-0FGp4LiLs1HbN9AkOs68J1mEmyHLPBvFAPAcmn9iD0VdgMFveTNA=s1600"/>
+                    </div>
+                <span class="txmitext">Lead Sheet</span>
+                    <div class="kaledoset">
+                        <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTcb-99xe6AFRMoaEFez38uDmtyCyD18Xe-yCJLRPcQRPuA0-SAwghF-vV7o2T2O2FDRQcEb0GsnjN4pNu0vNr5f3TNRA=s1600"/>
+                    </div>
+            </main>
         </div>
     </div>
   </body>     
