title image been put in

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
             <aside class="sidebar">
                 <nav role='navigation'>
                     <ul id="resumenav">
-                        <ul><a href="resume.html">Resume</a></ul>
+                        <ul><a href="resume.html">resume</a></ul>
                         <ul><a href="txmi.html">TXMI Capstone</a></ul>
-                        <ul><a href="kaledo.html">Digital Designs</a></ul>
-                        <ul><a href="contact.html">How to Find Me</a></ul>
+                        <ul><a href="kaledo.html">digital designs</a></ul>
+                        <ul><a href="contact.html">how to find me</a></ul>
                     </ul>   
                 </nav>
             </aside>
