--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <aside class="sidebar">
         <nav role='navigation'>
           <ul id="nav">
-            <ul><a href="resume.html">Resume</a></ul>
-            <ul><a href="txmi.html">TXMI Capstone</a></ul>
-            <ul><a href="kaledo.html">Digital Designs</a></ul>
-            <ul><a href="contact.html">How to Find Me</a></ul>
+            <ul><a href="resume.html">resume</a></ul>
+            <ul><a href="txmi.html">TXMI capstone</a></ul>
+            <ul><a href="kaledo.html">digital designs</a></ul>
+            <ul><a href="contact.html">how to find me</a></ul>
           </ul>   
         </nav>
       </aside>
@@ -32,7 +32,9 @@
     
 
     <footer>
-      <span id="footy">an Anders Law website</span>
+      <span id="footy">an</span>
+      <img id="derscollege" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRUOI5m3OZpfJaWq7qJtcoFXAiM9zyuZm0F6RFyorPG63tDqR8NY1hq535CvydeA-YO6cPZZKoAeAPxU9Q2Jwiczm301Q=s1600" />
+      <span id="footy">website</span>
     </footer>
     
   
