nav font updated + logo image

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <aside class="sidebar">
         <nav role='navigation'>
           <ul id="nav">
-            <ul><a href="resume.html">resume</a></ul>
-            <ul><a href="txmi.html">TXMI capstone</a></ul>
-            <ul><a href="kaledo.html">digital designs</a></ul>
-            <ul><a href="contact.html">how to find me</a></ul>
+            <ul><a href="resume.html">Resume</a></ul>
+            <ul><a href="txmi.html">TXMI Capstone</a></ul>
+            <ul><a href="kaledo.html">Digital Designs</a></ul>
+            <ul><a href="contact.html">How to Find Me</a></ul>
           </ul>   
         </nav>
       </aside>
@@ -33,7 +33,7 @@
 
     <footer>
       <span id="footy">an</span>
-      <img id="derscollege" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRUOI5m3OZpfJaWq7qJtcoFXAiM9zyuZm0F6RFyorPG63tDqR8NY1hq535CvydeA-YO6cPZZKoAeAPxU9Q2Jwiczm301Q=s1600" />
+      <img id="derscollege" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQbaLVXVRK8V_kqSpO6fn8OjfBrDugC6B3bMMAhRo6ScqVwCwhBJ25M0WAp4IqDxiAJc68sTzr5n56qYljKuJP8JHniZA=s1600" />
       <span id="footy">website</span>
     </footer>
     
