--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <aside class="sidebar">
         <nav role='navigation'>
           <ul id="nav">
-            <ul><a href="resume.html">Resume</a></ul>
-            <ul><a href="txmi.html">TXMI Capstone</a></ul>
-            <ul><a href="kaledo.html">Digital Designs</a></ul>
+            <ul><a id="resumetag" href="resume.html">Resume</a></ul>
+            <ul><a id="txmitag" href="txmi.html">TXMI Capstone</a></ul>
+            <ul><a id="kaledotag" href="kaledo.html">Digital Designs</a></ul>
             <ul><a href="contact.html">How to Find Me</a></ul>
           </ul>   
         </nav>
