nav and links light up + nav sizing changes started

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
             <aside class="sidebar">
                 <nav role='navigation'>
                     <ul id="resumenav">
-                        <ul><a id="resumetag" href="resume.html">Resume</a></ul>
-                        <ul><a id="txmitag" href="txmi.html">TXMI Capstone</a></ul>
-                        <ul><a id="kaledotag" href="kaledo.html">Digital Designs</a></ul>
-                        <ul><a href="contact.html">How to Find Me</a></ul>
+                        <ul><a class="resumetag" href="resume.html">Resume</a></ul>
+                        <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
+                        <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
+                        <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
                     </ul>   
                 </nav>
             </aside>
@@ -39,13 +39,13 @@
                     <main class="content2">
                         <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking Boar's Head Lounge.<br><br>or the sewing lab</span>
                         <div class="logogroup">
-                            <a class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
+                            <a id="linkedcolor" class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i>
                             </a>
-                            <a class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
+                            <a id="gitcolor" class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
+                            <a id="youcolor" class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i>
                             </a>
                         </div>     
