more font changes

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
             
                     <main class="content2">
-                        <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking Boar's Head Lounge.<br><br>or the sewing lab</span>
+                        <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking Boar's Head Lounge<br><br>or the sewing lab</span>
                         <div class="logogroup">
                             <a id="linkedcolor" class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i>
