--- a/contact.html
+++ b/contact.html
@@ -27,17 +27,17 @@
             <aside class="sidebar">
                 <nav role='navigation'>
                     <ul id="resumenav">
+                        <ul><a class="contacttag" href="index.html">Home</a></ul>
                         <ul><a class="resumetag" href="resume.html">Resume</a></ul>
                         <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
                         <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
-                        <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
                     </ul>   
                 </nav>
             </aside>
 
             
                     <main class="content2">
-                        <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking Boar's Head Lounge<br><br>or the sewing lab</span>
+                        <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking boar's head lounge<br><br>or the sewing lab</span>
                         <div class="logogroup">
                             <a id="linkedcolor" class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i>
