--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
             <aside class="sidebar">
                 <nav role='navigation'>
                     <ul id="resumenav">
-                        <ul><a class="resumetag" href="resume.html">Resume</a></ul>
+                        <ul><a class="resumetag" href="index.html">Home</a></ul>
                         <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
                         <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
                         <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
