--- a/txmi.html
+++ b/txmi.html
@@ -26,8 +26,8 @@
             <aside class="sidebar">
                 <nav role='navigation'>
                     <ul id="resumenav">
+                        <ul><a class="txmitag" href="index.html">Home</a></ul>
                         <ul><a class="resumetag" href="resume.html">Resume</a></ul>
-                        <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
                         <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
                         <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
                     </ul>   
@@ -37,7 +37,7 @@
             <main class="content3">
                 <span class="txmitext">Target Market</span>
                     <div class="kaledoset">
-                        <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQfL0r4SutctJwHjFUihkeXqAOI9vGAjuPQwl00vjWHOohxY6U6Q0ed-KJztVk0RI_MGQoqtvGwGKqAPguhU3h40-aA7g=s1600"/>
+                        <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQBGRCDGnMQkqb8opx1Gjw6pAIb3VFzlzOM1b1HOHqJDmEsADv-7SF127_65-iYICNh6Nv0ZNT4KeNLAMdodjl6afVk_Q=s1600"/>
                     </div>
                 <span class="txmitext">MoodBoard</span>
                     <div class="kaledoset">
