more pics in txmi

--- a/txmi.html
+++ b/txmi.html
@@ -20,7 +20,6 @@
             </main>
         </div>
 
-
         <div class="maincontainer">
 
             <aside class="sidebar">
@@ -33,6 +32,7 @@
                     </ul>   
                 </nav>
             </aside>
+        
 
             <main class="content3">
                 <span class="txmitext">Target Market</span>
@@ -50,6 +50,14 @@
                 <span class="txmitext">Lead Sheet</span>
                     <div class="kaledoset">
                         <img class="txmipic" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTcb-99xe6AFRMoaEFez38uDmtyCyD18Xe-yCJLRPcQRPuA0-SAwghF-vV7o2T2O2FDRQcEb0GsnjN4pNu0vNr5f3TNRA=s1600"/>
+                    </div>
+                <span class="txmitext">Constructed Garment</span>
+                    <div class="garmentset">
+                        <img class="garmentphotos" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRL9JkkPdqURKrSBYRPq-yXHEBNEyr3Ly6lDXA-sqnlsrTSfm6AfhUhOnyHQaDVatO0QzkWQ8Tp73cEAiLBtWmTAV6fNA=s1600"/>
+                        <img class="garmentphotos" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS6_u6mr-gv1t4pJBgXAx1AW170RMuK-7ynT2411m7DWv1auOXJaSJsa_WJbzV_Ui_usDz7YzTu-Eq3HpA7grcfMDCl6g=s1600"/>
+                        <img class="garmentphotos" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQJPvpK9kqyEqKpys2vlyRAa6VOI3HGim0hXxX9bOtPK7J3ChquLJWjIL20CyMYsy6Mv5oTBaB6SsYMFuhgIasjY2dF5Q=s1600"/>
+                        <img class="garmentphotos" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRYVVVjYqVHTyQcHf6ZKl1Nzr2dbeHn3A4G1ly0F7ykEL2GmgKm9s1hBaV7q0yCgr00H8d0nAfim8SevAXBnfOK2_4r=s1600"/>
+                        <img class="garmentphotos" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRlus8wukwoNNm-qvVQ5KxLkPem-tLIvtVdimlnmZ4dQw-PWCxE3QKIFrULKRXtWp8Xx46EZGQ9873OBNil1pzxCs1wVw=s1600"/>
                     </div>
             </main>
         </div>
