fdsa page finished

--- a/fdsa.html
+++ b/fdsa.html
@@ -29,6 +29,7 @@
                             <ul><a class="kaledotag" href="index.html">Home</a></ul>
                             <ul><a class="resumetag" href="resume.html">Resume</a></ul>
                             <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
+                            <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
                             <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
                         </ul>   
                     </nav>
@@ -36,23 +37,23 @@
           
 
             <main class="content3">
-                <span class="ddtext">Kaledo Print</span>
+                <span class="ddtext">Fall/Winter 22' "Wonderland: The Land of Dreams"</span>
                     <div class="kaledoset">
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYR9ez8Qlz_wMag1tecRZPESjwY5vPHnrO1abAlJ8Mo8vtkLHfZaDT8Rf0dWwpQqExCeexkbPrhNkHrY1qw4w8NNc2TsCg=s1600"/>
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS85-P9tUqxUGQzGVgDX57rc4Qf8PeRxsrggkjzQa2MEBwtYXnLczrzohhBxJut54QB7hGWHgCimvdHBgBZudwiCEFlww=s1600"/>
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSStZrosjnNjAg-aiBju2UTJ19-aLSIkm2-cVr5Qo5S0GLDWDCmqXb1yAAOIGNZx2zORkrGvr7ewpxQR1yzfNi0LfV6og=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSILn43FOYBwG5_Cv-ZIOAg3qhvZkohg5bQyIXPT2sryeZ5tCC20Aj2zozWJcnRsoVajsi7EbfSCpqo3MDJgWNd1zKQnw=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQJeoLlRq-IOzL4ZkqxkUuYsgYxhBn7mPH2q0OWCekAo0dfNi5ZA-fIIWFwB5Zrl7FKk-WE55uBkYP1edKVzNa-4OxMwA=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYR-0UsyzbvXOTiWOK5gKh8cSP3YJxnfM_1JLOry0fpSEI2JK0qfKHW2TEBnrvM_G7uV32pWrFFiC2yq9hSjzpsXG_R7SA=s1600"/>
                     </div>
-                <span class="ddtext">Kaledo Knit</span>
+                <span class="ddtext">Spring/Summer 23' "Blood, Sweat, and Tears"</span>
                     <div class="kaledoset">
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTVp2QlJMHumpAOnCZG0PYG2NFXz_hFApHYZt8cemMIML_5-U8D9GF3CWMT5vYtRmt_qUyvqMmbgNyOtwXioADEzNlUsw=s1600"/>
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYT6JiANkyVkAljpz--8hn17ygmLEyt77x0wO_a96rMfPVoJn-Q0C0uXm-nVVTUR2sHmpFsnFP6HUaV1bdRLXe5r85wNng=s1600"/>
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS6rJTKENcfbblj85c5kWmG3QmQ8asAWvgFI3a_UKiv7ihc3q8WXeoBWB6ZqpoI8uWS8H4D-6GBs_lYi1FghSXBzyTl=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRtpCByXrwfdByeMeEn7Yok35-Wn5fgMqxP-rwsk7-gZzE7I7r3spbdvNvA5MB8yERG3qodtIuD4MsX-lm9fJwik7lB=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYR-iDO74nBrqDt-klgbiR2uUkP53q6gs3nVcvz5EwsXUhYzbeHMZHdagnL1ERmfyQ7eUSWtXQvhxMzieC4EjiHo7iYxag=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSGLMMKFUmUwsnF7TZ8fRB1MCTNcO0En6Ybb9vaO5BFkjYeW5xuXEitB5Rb_EXfpyku7Dcm6tm-UB9JyT1cEMofL0NcXQ=s1600"/>
                     </div>   
-                <span class="ddtext">Kaledo Weave</span>
+                <span class="ddtext">Fall/Winter 23' "Silver Linings: A Light in the Dark"</span>
                     <div class="kaledoset">
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQyErMUPEmMcZ2Z204VZYG_Yev8iZrNedJP9jDe-RXYeTvvQGpr6wV_g2QdaEKIdWGhwo47wFICORq9UPI3jZIKORbh=s1600"/>
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQbzte1-8dgRHPSqO_MpCk5fGrxHzL6DFLjB4DDwtoLf3r2XjaC8P_uCs85CA3QBKfTTYV9zXxfFcAFhHgKWhrkR3W_=s1600"/>
-                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQmaHLTpwcQTCmdAwpENObdXdcRC94yXgADBd1GLKvaWWV4jxZet21ISpJnJsmducqL0bqtOfRyvxGQMa0z65_U8AXBwA=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRd7aFSQQUdj3sfTmx3pDIAFGoKq0LXnSsPXyEYO07d2e0jLsUY5kgKvVkmrd7gMorP1vi7daiOK9mmEjBNdtSo9eBvYw=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS392JMqmdM0slyFWAyZ1hFWuD2Isyqm6BGk7So8squ27v-_eRZVGg0UdW3NWffqn0hJa7I6rfxhhIrXpxDmlVuMZIN_g=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTIriFpwHjIQGxeydPeYx1uLzB81xRx71mYCcQggY4NVLybmvjjRA_8yNLS_Uee8fQE1IMQLukjO4Vb0DIG4ubOtaEeCw=s1600"/>
                     </div>
             </main>
         </div>
