--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
                         <ul><a class="resumetag" href="resume.html">Resume</a></ul>
                         <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
                         <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
+                        <ul><a class="fdsatag" href="fdsa.html">FDSA</a></ul>
                     </ul>   
                 </nav>
             </aside>
