--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,7 @@
                         <ul><a class="resumetag" href="index.html">Home</a></ul>
                         <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
                         <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
+                        <ul><a class="fdsatag" href="fdsa.html">FDSA</a></ul>
                         <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
                     </ul>   
                 </nav>
