--- a/txmi.html
+++ b/txmi.html
@@ -28,6 +28,7 @@
                         <ul><a class="txmitag" href="index.html">Home</a></ul>
                         <ul><a class="resumetag" href="resume.html">Resume</a></ul>
                         <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
+                        <ul><a class="fdsatag" href="fdsa.html">FDSA</a></ul>
                         <ul><a class="contacttag" href="contact.html">How to Find Me</a></ul>
                     </ul>   
                 </nav>
