--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <div class="parentresume">
         <div class="wrapper2">
             <main>
-                <span id="resumeheader">how to find me</span>
+                <span id="resumeheader">How to Find Me</span>
             </main>
         </div>
 
