--- a/fdsa.html
+++ b/fdsa.html
@@ -11,7 +11,7 @@
     </head>
 
   <!-- Visible content for the page -->
-  <body id="FDSApage">
+  <body id="resumepage">
 
     <div class="parentresume">
         <div class="wrapper2">
