--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <div class="parentresume">
         <div class="wrapper2">
             <main>
-                <span id="resumeheader">resume</span>
+                <span id="resumeheader">Resume</span>
             </main>
         </div>
 
