--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <aside class="sidebar">
         <nav role='navigation'>
           <ul id="nav">
-            <ul><a class="resumetag" href="resume.html">Resume</a></ul>
+            <ul><a class="resumetag" href="resume.html">Resumetest</a></ul>
             <ul><a class="txmitag" href="txmi.html">TXMI Capstone</a></ul>
             <ul><a class="kaledotag" href="kaledo.html">Digital Designs</a></ul>
             <ul><a class="fdsatag" href="fdsa.html">FDSA</a></ul>
