--- a/tred.html
+++ b/tred.html
@@ -38,9 +38,9 @@
         
 
             <main class="content3">
-                <span class="txmitext">Donut (Please Give Time for Loading)</span>
+                <span class="txmitext">Donut</span>
                     <div class="kaledoset">
-                        
+                        <model-viewer id="donut" src="3d assets/donutcompressednoplane.glb" loading="eager" alt="3D Donut Loading" camera-controls disable-zoom></model-viewer>
                     </div>
                 <span class="txmitext">MoodBoard</span>
                     <div class="kaledoset">
