added more knits

--- a/kaledo.html
+++ b/kaledo.html
@@ -55,6 +55,11 @@
                         <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYT6JiANkyVkAljpz--8hn17ygmLEyt77x0wO_a96rMfPVoJn-Q0C0uXm-nVVTUR2sHmpFsnFP6HUaV1bdRLXe5r85wNng=s1600"/>
                         <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS6rJTKENcfbblj85c5kWmG3QmQ8asAWvgFI3a_UKiv7ihc3q8WXeoBWB6ZqpoI8uWS8H4D-6GBs_lYi1FghSXBzyTl=s1600"/>
                     </div>   
+                    <div class="kaledoset">
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQG5U09bwfdvp39AgbBkz4mcSvlvXCI9AxedcOQd54w4gBKqRvARcZWYM4mT7ROL-Lt9lOlDIKbrizySFyht6YHCZuU8A=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSAyctstiNs-oBbQbQ26DQf_iMWH3vI2tOsRMKR6oBuCkst1e3a81ui5pxqpMJrUM0zpKuNUWFzsscWH47ib7XoD5nV_Q=s1600"/>
+                        <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQJfHsVCXg0k6aGWjA-IP8d2z07JZOyh6Fnrquub-yHCBXkwp1EKIA0Cp9SIynMx37AqTELsNdQxIRhKYKo42sV8uk-=s1600"/>
+                    </div>  
                 <span class="ddtext">Kaledo Weave</span>
                     <div class="kaledoset">
                         <img class="kaledo" src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQyErMUPEmMcZ2Z204VZYG_Yev8iZrNedJP9jDe-RXYeTvvQGpr6wV_g2QdaEKIdWGhwo47wFICORq9UPI3jZIKORbh=s1600"/>
