--- a/home.html
+++ b/home.html
@@ -25,9 +25,11 @@
         </aside>
 
         <main class="homemain">
-            <button class="navbutton">
-                I
-            </button>
+            <div class="buttonholder">
+                <button class="navbutton">
+                    I
+                </button>
+            </div>
             <div class="mainimg">
                 hello
             </div>
