--- a/home.html
+++ b/home.html
@@ -22,16 +22,26 @@
                 <span class="asidetext nametext">Anders Law</span>
                 <span class="asidetext">website</span>
             </div>
-        </aside>
-
-        <main class="homemain">
             <div class="buttonholder">
                 <button class="navbutton">
                     I
                 </button>
+                <nav>
+                    <ul class="sidebar">
+                        <li><a href="#">codingtwogo</a></li>
+                        <li><a href="#">codingtwogo</a></li>
+                        <li><a href="#">codingtwogo</a></li>
+                        <li><a href="#">codingtwogo</a></li>
+                        <li><a href="#">codingtwogo</a></li>
+                        <li><a href="#">codingtwogo</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="mainimg">
-                hello
+        </aside>
+
+        <main class="homemain">
+            <div class="imgholster">
+                    hello
             </div>
         </main>
     </div>
