--- a/re(sume).html
+++ b/re(sume).html
@@ -19,7 +19,7 @@
     <div class="biggestflex">
         <main class="bigboxleft">
             <div class="leftimg">
-                resumehere
+                <img class="resumeimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
             </div>
         </main>
         <aside class="bigboxright">
