--- a/re(sume).html
+++ b/re(sume).html
@@ -17,11 +17,13 @@
   <!-- Visible content for the page -->
   <body class="bodytag">
     <div class="biggestflex">
+    <!-- leftside begins here -->
         <main class="bigboxleft">
             <div class="leftimg">
                 <img class="resumeimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
             </div>
         </main>
+    <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
                 resume
@@ -30,6 +32,17 @@
                 by Anders
             </div>
         </aside>
+        <!-- navbar stuff-->
+        <nav>
+            <ul class="sidebar">
+                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+            </ul>
+        </nav>
     </div>
 
   </body>
