navbar for pages(not home)

--- a/re(sume).html
+++ b/re(sume).html
@@ -28,8 +28,10 @@
             <div class="toptextbox">
                 resume
             </div>
-            <div class="bottomtextbox">
-                by Anders
+            <div class="buttonholder">
+                <button class="navbutton" onclick=showsidebar()>
+                    I
+                </button>
             </div>
         </aside>
         <!-- navbar stuff-->
