--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
     <!-- navbar stuff-->
         <nav>
             <ul class="sidebar">
-                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
