close button moved, txmi added

--- a/home.html
+++ b/home.html
@@ -34,6 +34,7 @@
         <nav>
             <ul class="sidebar">
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
+                <li><a class="navtext" href="txmi.html">TXMI</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
