--- a/txmi.html
+++ b/txmi.html
@@ -38,7 +38,7 @@
         <nav>
             <ul class="sidebar">
                 <li><a class="navtext" href="home.html">Home</a></li>
-                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
