more pages added

--- a/re(sume).html
+++ b/re(sume).html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Anders Law</title>
+        <title>ResumePage</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +38,7 @@
         <nav>
             <ul class="sidebar">
                 <li><a class="navtext" href="home.html">Home</a></li>
-                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
