--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -3,7 +3,7 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>Anders Law</title>
+        <title>TXMI Page</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                resume
+                TXMI Capstone
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
