--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -3,9 +3,9 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>HomePage</title>
+        <title>TXMI Page</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="(home)re.css" />
+        <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Google fonts stuff below-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,14 +15,18 @@
         <script type="text/javascript" src="java.js"></script>
     </head>
   <!-- Visible content for the page -->
-  <!--main page text below-->
-  <body class="mainbody">
-    <div class="papaflex">
-        <aside class="homeaside">
-            <div class="textcontainer">
-                <span class="asidetext">an</span>
-                <span class="asidetext nametext">Anders Law</span>
-                <span class="asidetext">website</span>
+  <body class="bodytag">
+    <div class="biggestflex">
+    <!-- leftside begins here -->
+        <main class="bigboxleft">
+            <div class="leftimg">
+                <img class="resumeimage" src=""/> 
+            </div>
+        </main>
+    <!-- rightside begins here -->
+        <aside class="bigboxright">
+            <div class="toptextbox">
+                TXMI Capstone
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
@@ -30,24 +34,18 @@
                 </button>
             </div>
         </aside>
-    <!-- navbar stuff-->
+        <!-- navbar stuff-->
         <nav>
             <ul class="sidebar">
+                <li><a class="navtext" href="home.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
-                <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
-                <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
-    <!-- stuff for the side coloum with the picture-->
-        <main class="homemain">
-            <div class="imgholster">
-                    hello
-            </div>
-        </main>
     </div>
+
   </body>
 </html>
