trying to get images scrolling

--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -20,13 +20,18 @@
     <!-- leftside begins here -->
         <main class="bigboxleft">
             <div class="leftimg">
-                <img class="resumeimage" src=""/> 
+                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/>
+                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
+            </div>
+            <div class="leftimg">
+                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/>
+                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
             </div>
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                TXMI Capstone
+                Lectra Kaledo
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
