fixed the button position

--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
                 <span class="asidetext nametext">Anders Law</span>
                 <span class="asidetext">website</span>
             </div>
+            <!--buttonstuff in here-->
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
                     I
