--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -37,7 +37,7 @@
         <!-- navbar stuff-->
         <nav>
             <ul class="sidebar">
-                <li><a class="navtext" href="home.html">Home</a></li>
+                <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
