--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -33,7 +33,7 @@
         <!-- navbar stuff-->
         <nav>
             <ul class="sidebar">
-                <li><a class="navtext" href="home.html">Home</a></li>
+                <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
