--- a/re(sume).html
+++ b/re(sume).html
@@ -20,7 +20,7 @@
     <!-- leftside begins here -->
         <main class="bigboxleft">
             <div class="leftimg">
-                <img class="resumeimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
+                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Anders%20Law%20Resume%20.pdf"/> 
             </div>
         </main>
     <!-- rightside begins here -->
